--- a/src/components/ProductGrid.module.css
+++ b/src/components/ProductGrid.module.css
@@ -13,7 +13,7 @@
 
 .filterSection button {
   margin-top: 8%;
-  margin-left: 8%;
+  margin-left: 2%;
   padding: 10px 20px;
   font-size: 16px;
   border: 1px solid #ddd;
@@ -68,6 +68,13 @@
   width: 100%;
   height: 200px;
   object-fit: cover;
+}
+.noProducts {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #a3423c;
+  font-weight: bold;
+  margin-top: 20px;
 }
 
 /* Product Details */
