--- a/src/components/ProductGrid.module.css
+++ b/src/components/ProductGrid.module.css
@@ -1,4 +1,8 @@
 /* General Styling */
+
+
+
+
 .productGrid {
   padding: 60px 0 30px;
 }
@@ -16,8 +20,8 @@
   margin-left: 2%;
   padding: 10px 20px;
   font-size: 16px;
-  border: 1px solid #ddd;
-  background-color: #fff;
+  border: 1px solid #E8CDCC; /* Secondary Color */
+  background-color: #F7F5F2; /* Light Secondary */
   color: #333;
   border-radius: 5px;
   cursor: pointer;
@@ -25,7 +29,7 @@
 }
 
 .filterSection button:hover {
-  background-color: #8a4b2f;
+  background-color: #D7A7AA; /* Accent */
   color: #fff;
 }
 
@@ -47,7 +51,7 @@
 
 /* Product Card */
 .productCard {
-  border: 1px solid #ddd;
+  border: 1px solid #E8CDCC; /* Soft border */
   border-radius: 8px;
   overflow: hidden;
   background-color: #fff;
@@ -72,7 +76,7 @@
 .noProducts {
   text-align: center;
   font-size: 1.2rem;
-  color: #a3423c;
+  color: #D7A7AA; /* Accent */
   font-weight: bold;
   margin-top: 20px;
 }
@@ -99,7 +103,7 @@
 .price {
   font-size: 1rem;
   font-weight: bold;
-  color: #8a4b2f;
+  color: #D7A7AA; /* Accent */
 }
 
 /* Responsive Design */
