--- a/src/components/purchase.module.css
+++ b/src/components/purchase.module.css
@@ -52,12 +52,18 @@ input:focus, select:focus {
 
 .checkbox {
   display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+      align-items: center;
+      margin-bottom: 20px;
+      flex-direction: row-reverse;
+      justify-content: start;
+      gap: 10px;
+      margin: 10px;
+  
 }
 
 .checkbox input {
   margin-right: 10px;
+  
 }
 
 .summary-section h3 {
