--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -22,6 +22,7 @@
 .productName {
   font-weight: bold;
   font-size: 1.2rem;
+  
 }
 
 .discountPrice {
@@ -74,7 +75,8 @@
 }
 
 .deleteItem:hover {
-  color: #d9534f;
+  color: #d7a7aa;
+
 }
 
 .shoppingInfo {
@@ -108,5 +110,23 @@
 }
 
 .checkoutButton:hover {
-  background-color: #b58b8e;
+   background-color: #b58b8e;
+}
+
+.continueShoppingButton {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: transparent;
+  color: #d7a7aa;
+  border: 2px solid #d7a7aa;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.continueShoppingButton:hover {
+  background-color: #d7a7aa;
+  color: white;
 }
